--- a/Sample.NETCore22/Properties/launchSettings.json
+++ b/Sample.NETCore22/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Sample.NETCore22": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "/health",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
