--- a/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
+++ b/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeCube.AspNetCore.HealthChecks.Extensions.Response\CodeCube.AspNetCore.HealthChecks.Extensions.Response.csproj" />
+  </ItemGroup>
+
 </Project>
