--- a/Samples.NETCore31/Samples.NETCore31.csproj
+++ b/Samples.NETCore31/Samples.NETCore31.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Publisher.ApplicationInsights" Version="3.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="3.1.2" />
     <PackageReference Include="CodeCube.AspNetCore.HealthChecks.Extensions" Version="1.0.193454" />
   </ItemGroup>
 </Project>
