--- a/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning.csproj
+++ b/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
