--- a/.github/workflows/extensions-uris-version-cicd.yml
+++ b/.github/workflows/extensions-uris-version-cicd.yml
@@ -16,9 +16,9 @@ env:
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   release:
     types:
       - published
