--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Response/CodeCube.AspNetCore.HealthChecks.Extensions.Response.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Response/CodeCube.AspNetCore.HealthChecks.Extensions.Response.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+
+    <Authors>Rob Lohmann</Authors>
+    <PackageIconUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions/blob/master/nuget-icon.png?raw=true</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</RepositoryUrl>
+    <PackageTags>aspnetcore healthcheck responsewriter</PackageTags>
+    <Description>CodeCube.AspNetCore.HealthChecks.Extensions.Response is a simple package which add responsewriters to Microsoft.AspNetCore.HealthChecks</Description>
   </PropertyGroup>
 
   <ItemGroup>
