--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+
+    <Authors>Rob Lohmann</Authors>
+    <PackageIconUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions/blob/master/nuget-icon.png?raw=true</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</RepositoryUrl>
+    <PackageTags>aspnetcore healthcheck url urlgroup uri</PackageTags>
+    <Description>CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning is a simple health check package for URL's with the extra ability to return versionnumbers in the responsedata as well.</Description>
   </PropertyGroup>
 
   <ItemGroup>
