--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
@@ -11,12 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CodeCube.AspNetCore.HealthChecks.Extensions.Response" Version="1.0.203581-alpha" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CodeCube.AspNetCore.HealthChecks.Extensions.Response\CodeCube.AspNetCore.HealthChecks.Extensions.Response.csproj" />
   </ItemGroup>
 
 </Project>
