--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Uris.Versioning.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
