--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
-    <Authors>Rob Lohmann</Authors>
-    <PackageIconUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions/blob/master/nuget-icon.png?raw=true</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</RepositoryUrl>
-    <PackageTags>aspnetcore healthcheck versionnumber</PackageTags>
-    <Description>Small library with extensions on the Microsoft.Extensions.Diagnostics.HealthCheck library to add a versionnumber to the raw output of the healthcheck</Description>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<Authors>Rob Lohmann</Authors>
+		<PackageIconUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions/blob/master/nuget-icon.png?raw=true</PackageIconUrl>
+		<PackageProjectUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/roblohmann/CodeCube.AspNetCore.HealthChecks.Extensions</RepositoryUrl>
+		<PackageTags>aspnetcore healthcheck versionnumber</PackageTags>
+		<Description>Small library with extensions on the Microsoft.Extensions.Diagnostics.HealthCheck library to add a versionnumber to the raw output of the healthcheck</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CodeCube.AspNetCore.HealthChecks.Extensions.Response" Version="3.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
+		<!--<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />-->
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
 
 </Project>
