--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
@@ -12,9 +12,15 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
-		<!--<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />-->
+		<PackageReference Include="CodeCube.AspNetCore.HealthChecks.Extensions.Response" Version="7.1.2-alpha" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.0" />
 	</ItemGroup>
 
 </Project>
