--- a/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
+++ b/src/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning/CodeCube.AspNetCore.HealthChecks.Extensions.Versioning.csproj
@@ -12,7 +12,7 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-		<PackageReference Include="CodeCube.AspNetCore.HealthChecks.Extensions.Response" Version="7.1.2-alpha" />
+		<PackageReference Include="CodeCube.AspNetCore.HealthChecks.Extensions.Response" Version="7.0.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
@@ -20,7 +20,7 @@
 		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.8" />
 	</ItemGroup>
 
 </Project>
